@@ -1,3 +1,5 @@
+* Fix regression bug with `HOST_SIGNATURE`. [jddalton]
+
 * Set `ctx_data` even when mutation events are not supported. [jddalton]
 
 * Add `RE_BUGGY_QSA` test for QSA not detecting selected options via the `:checked` pseudo. [Alex Russell, jddalton]
